# the-grid

./: .gitignore  grid-fibocalculation.py  grid-perfectsystem.py  pyproject.toml
